


add_library(MOX
    MOX_T4.C 
    Allocate.C 
    CFG.C 
    DBG.C 
    DOS.C 
    EMM.C 
    Exit.C 
    Fields.C 
    file_ani.C 
    Fonts.C 
    GENDRAW.C 
    Graphics.C  
    FLIC_Draw.C 
    Input.C 
    IO_Buffer.C 
    Keyboard.C 
    LBX_Load.C 
    LOADSAVE.C 
    Mouse.C 
    MoX_Temp.C 
    paragrph.C 
    random.C 
    Util.C 
    Video.C 
    Video2.C
)
