
add_library(MOX
    Allocate.C
    CFG.C
    DBG.C
    DOS.C
    EMM.C
    Exit.C
    Fields.C
    file_ani.C
    Fonts.C
    GENDRAW.C
    Graphics.C
    FLIC_Draw.C
    Input.C
    IO_Buffer.C
    Keyboard.C
    LBX_Load.C
    LOADSAVE.C
    Mouse.C
    MOX_DAT.C
    MOX_SET.C
    MOX_SND.C
    MOX_T4.C
    paragrph.C
    random.C
    SOUND.C
    Util.C
    Video.C
    Video2.C
)
