set(SDL2_SOURCES
    ${PROJECT_SOURCE_DIR}/src/sdl2_EMM.c
    ${PROJECT_SOURCE_DIR}/src/sdl2_Input.c
    ${PROJECT_SOURCE_DIR}/src/sdl2_KD.c
    ${PROJECT_SOURCE_DIR}/src/sdl2_MD.c
    ${PROJECT_SOURCE_DIR}/src/sdl2_MOM.c
    ${PROJECT_SOURCE_DIR}/src/sdl2_PFL.c
    ${PROJECT_SOURCE_DIR}/src/sdl2_Timer.c
)

set(MOMLIB_SOURCES
    ${PROJECT_SOURCE_DIR}/src/AdvsrScr.c
    ${PROJECT_SOURCE_DIR}/src/AIBUILD.c
    ${PROJECT_SOURCE_DIR}/src/AIDATA.c
    ${PROJECT_SOURCE_DIR}/src/AIDUDES.c
    ${PROJECT_SOURCE_DIR}/src/AIMOVE.c
    ${PROJECT_SOURCE_DIR}/src/AISPELL.c
    ${PROJECT_SOURCE_DIR}/src/ALLOC.c
    ${PROJECT_SOURCE_DIR}/src/ArmyList.c
    ${PROJECT_SOURCE_DIR}/src/CITYCALC.c
    ${PROJECT_SOURCE_DIR}/src/CityList.c
    ${PROJECT_SOURCE_DIR}/src/CITYSCAP.c
    ${PROJECT_SOURCE_DIR}/src/CityScr.c
    ${PROJECT_SOURCE_DIR}/src/City_ovr55.c
    ${PROJECT_SOURCE_DIR}/src/Combat.c
    ${PROJECT_SOURCE_DIR}/src/CREDITS.c
    ${PROJECT_SOURCE_DIR}/src/DIPLOMAC.c
    ${PROJECT_SOURCE_DIR}/src/EVENTS.c
    ${PROJECT_SOURCE_DIR}/src/Explore.c
    ${PROJECT_SOURCE_DIR}/src/Help.c
    ${PROJECT_SOURCE_DIR}/src/HIRE.c
    ${PROJECT_SOURCE_DIR}/src/Init.c
    ${PROJECT_SOURCE_DIR}/src/INITGAME.c
    ${PROJECT_SOURCE_DIR}/src/INTRO.c
    ${PROJECT_SOURCE_DIR}/src/ItemMake.c
    ${PROJECT_SOURCE_DIR}/src/Items.c
    ${PROJECT_SOURCE_DIR}/src/ItemScrn.c
    ${PROJECT_SOURCE_DIR}/src/ItemView.c
    ${PROJECT_SOURCE_DIR}/src/Lair.c
    ${PROJECT_SOURCE_DIR}/src/LOADER.c
    ${PROJECT_SOURCE_DIR}/src/LoadScr.c
    ${PROJECT_SOURCE_DIR}/src/LVLMAKE.c
    ${PROJECT_SOURCE_DIR}/src/MagicScr.c
    ${PROJECT_SOURCE_DIR}/src/MainMenu.c
    ${PROJECT_SOURCE_DIR}/src/MainScr.c
    ${PROJECT_SOURCE_DIR}/src/MainScr_Maps.c
    ${PROJECT_SOURCE_DIR}/src/MAPGEN.c
    ${PROJECT_SOURCE_DIR}/src/MGC_DATA.c
    ${PROJECT_SOURCE_DIR}/src/MOM_SCR.c
    ${PROJECT_SOURCE_DIR}/src/MOM_DBG.c
    ${PROJECT_SOURCE_DIR}/src/MOM_PFL.c
    ${PROJECT_SOURCE_DIR}/src/MovePath.c
    ${PROJECT_SOURCE_DIR}/src/NewGame.c
    ${PROJECT_SOURCE_DIR}/src/NEXTTURN.c
    ${PROJECT_SOURCE_DIR}/src/Outpost.c
    ${PROJECT_SOURCE_DIR}/src/OverSpel.c
    ${PROJECT_SOURCE_DIR}/src/ProdScr.c
    ${PROJECT_SOURCE_DIR}/src/RACETYPE.c
    ${PROJECT_SOURCE_DIR}/src/REPORT.c
    ${PROJECT_SOURCE_DIR}/src/Roads.c
    ${PROJECT_SOURCE_DIR}/src/SBookScr.c
    ${PROJECT_SOURCE_DIR}/src/SCastScr.c
    ${PROJECT_SOURCE_DIR}/src/SCORE.c
    ${PROJECT_SOURCE_DIR}/src/Settings.c
    ${PROJECT_SOURCE_DIR}/src/SETTLE.c
    ${PROJECT_SOURCE_DIR}/src/special.c
    ${PROJECT_SOURCE_DIR}/src/Spellbook.c
    ${PROJECT_SOURCE_DIR}/src/Spells128.c
    ${PROJECT_SOURCE_DIR}/src/Spells129.c
    ${PROJECT_SOURCE_DIR}/src/Spells130.c
    ${PROJECT_SOURCE_DIR}/src/Spells131.c
    ${PROJECT_SOURCE_DIR}/src/Spells132.c
    ${PROJECT_SOURCE_DIR}/src/Spells133.c
    ${PROJECT_SOURCE_DIR}/src/Spells137.c
    ${PROJECT_SOURCE_DIR}/src/SPLMASTR.c
    ${PROJECT_SOURCE_DIR}/src/Surveyor.c
    ${PROJECT_SOURCE_DIR}/src/Terrain.c
    ${PROJECT_SOURCE_DIR}/src/UnitList.c
    ${PROJECT_SOURCE_DIR}/src/UnitMove.c
    ${PROJECT_SOURCE_DIR}/src/UnitStat.c
    ${PROJECT_SOURCE_DIR}/src/UNITSTK.c
    ${PROJECT_SOURCE_DIR}/src/UNITTYPE.c
    ${PROJECT_SOURCE_DIR}/src/UnitView.c
    ${PROJECT_SOURCE_DIR}/src/WIZVIEW.c
    ${PROJECT_SOURCE_DIR}/src/WZD_o059.c
    ${PROJECT_SOURCE_DIR}/src/WZD_o143.c
    ${PROJECT_SOURCE_DIR}/src/WZD_o146.c
)

set(MOX_SOURCES
    ${PROJECT_SOURCE_DIR}/src/MOX/AIL.c
    ${PROJECT_SOURCE_DIR}/src/MOX/Allocate.c
    ${PROJECT_SOURCE_DIR}/src/MOX/capture.c
    ${PROJECT_SOURCE_DIR}/src/MOX/CFG.c
    ${PROJECT_SOURCE_DIR}/src/MOX/DOS.c
    ${PROJECT_SOURCE_DIR}/src/MOX/EMM.c
    ${PROJECT_SOURCE_DIR}/src/MOX/EXIT.c
    ${PROJECT_SOURCE_DIR}/src/MOX/Fields.c
    ${PROJECT_SOURCE_DIR}/src/MOX/file_ani.c
    ${PROJECT_SOURCE_DIR}/src/MOX/Fonts.c
    ${PROJECT_SOURCE_DIR}/src/MOX/GENDRAW.c
    ${PROJECT_SOURCE_DIR}/src/MOX/GFILE.c
    ${PROJECT_SOURCE_DIR}/src/MOX/Graphics.c
    ${PROJECT_SOURCE_DIR}/src/MOX/FLIC_Draw.c
    ${PROJECT_SOURCE_DIR}/src/MOX/Input.c
    ${PROJECT_SOURCE_DIR}/src/MOX/IO_Buffer.c
    ${PROJECT_SOURCE_DIR}/src/MOX/Keyboard.c
    ${PROJECT_SOURCE_DIR}/src/MOX/LBX_Load.c
    ${PROJECT_SOURCE_DIR}/src/MOX/LOADSAVE.c
    ${PROJECT_SOURCE_DIR}/src/MOX/Mouse.c
    ${PROJECT_SOURCE_DIR}/src/MOX/MOM_Data.c
    ${PROJECT_SOURCE_DIR}/src/MOX/MOX_DAT.c
    ${PROJECT_SOURCE_DIR}/src/MOX/MOX_SET.c
    ${PROJECT_SOURCE_DIR}/src/MOX/MOX_SND.c
    ${PROJECT_SOURCE_DIR}/src/MOX/MOX_T4.c
    ${PROJECT_SOURCE_DIR}/src/MOX/paragrph.c
    ${PROJECT_SOURCE_DIR}/src/MOX/random.c
    ${PROJECT_SOURCE_DIR}/src/MOX/sdl2_Audio.c
    ${PROJECT_SOURCE_DIR}/src/MOX/SOUND.c
    ${PROJECT_SOURCE_DIR}/src/MOX/TEXTBOX.c
    ${PROJECT_SOURCE_DIR}/src/MOX/Util.c
    ${PROJECT_SOURCE_DIR}/src/MOX/Video.c
    ${PROJECT_SOURCE_DIR}/src/MOX/Video2.c
)

set(STU_SOURCES
    ${PROJECT_SOURCE_DIR}/src/STU/STU_CHK.c
    ${PROJECT_SOURCE_DIR}/src/STU/STU_DBG.c
    ${PROJECT_SOURCE_DIR}/src/STU/STU_DRAW.c
    ${PROJECT_SOURCE_DIR}/src/STU/STU_EMS.c
    ${PROJECT_SOURCE_DIR}/src/STU/STU_FMT.c
    ${PROJECT_SOURCE_DIR}/src/STU/STU_INT.c
    ${PROJECT_SOURCE_DIR}/src/STU/STU_JSON.c
    ${PROJECT_SOURCE_DIR}/src/STU/STU_MSG.c
    ${PROJECT_SOURCE_DIR}/src/STU/STU_PRN.c
    ${PROJECT_SOURCE_DIR}/src/STU/STU_SND.c
    ${PROJECT_SOURCE_DIR}/src/STU/STU_TST.c
    ${PROJECT_SOURCE_DIR}/src/STU/STU_UTIL.c
    ${PROJECT_SOURCE_DIR}/src/STU/STU_WAV.c
)

include(GoogleTest)

add_executable(testLearning testLearning.cpp
    ${MOMLIB_SOURCES}
    ${SDL2_SOURCES}
    ${MOX_SOURCES}
    ${STU_SOURCES}
)
# add_executable(testLearning testLearning.cpp ${CMAKE_SOURCE_DIR}/src/MainScr_Maps.c)

# target_include_directories(testLearning PRIVATE ${PROJECT_SOURCE_DIR}/src)
target_include_directories(testLearning PRIVATE ${CMAKE_SOURCE_DIR}/src)

# target_link_libraries(testLearning GTest::gtest_main)
target_link_libraries(testLearning GTest::gtest_main momlib MOX STU)

gtest_discover_tests(testLearning)
